# email-categorization-with-llms

./: .gitignore  README.md  generation_pipeline.sh  parameter_table.txt  prediction_schema.json  processing_pipeline.sh  pyproject.toml
notebooks/: 01_inference_speed.ipynb  02_supervised_analysis.ipynb  03_plot_classifier_results.ipynb  04_plot_embeddings.ipynb  05_additional_plots.ipynb  06_classifier_log_probs.ipynb  generate_data_for_supervised_comparisons.ipynb  make_classifier.ipynb  plot_theme.py
scripts/generate/: create_email_df.py  create_supervised_dataset.py  generate_consistency_data.py  generate_embeddings.py  generate_llm_email_labels.py  get_json_schema.py  gridsearch_classifier_params.py
scripts/process/: 00_count_raw_tokens.py  01_integrate.py  02_failure_rate_and_inference_speed.py  03_merge_supervised_data.py  04_compute_metrics_and_merge.py  05_process_parameter_table.py  06_process_consistency.py
