[project]
name = "clean-email"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "chardet>=5.2.0",
    "colorcet>=3.1.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "llvmlite>=0.44.0",
    "matplotlib>=3.10.0",
    "nbformat>=5.10.4",
    "numba>=0.61.0",
    "ollama>=0.4.7",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "polars>=1.21.0",
    "pyarrow>=19.0.1",
    "rich>=13.9.4",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=3.4.1",
    "tenacity>=9.0.0",
    "textual>=2.1.2",
    "tiktoken>=0.9.0",
    "toolz>=1.0.0",
    "tqdm>=4.67.1",
    "tyro>=0.9.16",
    "umap-learn>=0.5.7",
    "xformers>=0.0.29.post3",
]
